[package]
name = "vectortracer"
# not published on crates.io
version = "0.0.0"
authors = ["Alan North"]
edition = "2018"
license = "MIT"
description = "Wasm bindings to Visioncortex's VTracer library."

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = ["console_error_panic_hook"]

[dependencies]
visioncortex = "0.8.0"
console_log = { version = "1.0.0", features = ["color"] }
wasm-bindgen = { version = "0.2.63" }
serde = { version = "1.0", features = ["derive"] }
serde-wasm-bindgen = "0.5.0"
tsify = {version = "0.4.5", features =["js"]}
# The `console_error_panic_hook` crate provides better debugging of panics by
# logging them with `console.error`. This is great for development, but requires
# all the `std::fmt` and `std::panicking` infrastructure, so isn't great for
# code size when deploying.
console_error_panic_hook = { version = "0.1.6", optional = true }
smart-default = "0.7.1"

[profile.release]
# Tell `rustc` to optimize for small code size.
opt-level = "s"

[dev-dependencies]
wasm-bindgen-test = "0.3.13"

[dependencies.web-sys]
version = "0.3.64"
features = [
  "console",
  "ImageData",
]
